// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check if green green 1`] = `
<body>
  <div>
    <div
      class="display panel"
    >
      <div
        class="led green-led"
        data-testid="locked"
      >
        Unlocked
      </div>
      <div
        class="led red-led"
        data-testid="closed"
      >
        Closed
      </div>
    </div>
  </div>
</body>
`;

exports[`check if green red 1`] = `
<body>
  <div>
    <div
      class="display panel"
    >
      <div
        class="led green-led"
        data-testid="locked"
      >
        Unlocked
      </div>
      <div
        class="led red-led"
        data-testid="closed"
      >
        Closed
      </div>
    </div>
  </div>
</body>
`;

exports[`check if red red 1`] = `
<body>
  <div>
    <div
      class="display panel"
    >
      <div
        class="led red-led"
        data-testid="locked"
      >
        Locked
      </div>
      <div
        class="led red-led"
        data-testid="closed"
      >
        Closed
      </div>
    </div>
  </div>
</body>
`;
